--- a/test/index.html
+++ b/test/index.html
@@ -1,3 +1,10 @@
+<style type="text/css">
+<!--
+.STYLE1 {color: #FF0000}
+-->
+</style>
 <h1>This directory should be removed in the publish version!!!</h1>
 <h2>Notice: There is a hard code path "/" in each test case, please change it if your OVMS is not under the webroot of your site. Or the test cases cannot runs normally.</h2>
-<a href="core/TestRunner.html?test=..%2FTestSuite.html&auto=on&resultsUrl=..%2FpostResults.php">Click here to run default test suite.</a>
+<p><a href="core/TestRunner.html?test=..%2Fcases/TestSuite1.html&auto=on&resultsUrl=..%2FpostResults.php">Click here to run  test suite1.(Import test database)<br/>
+								 <span class="STYLE1">Warning:This process will cover your fisma database by sql files, so backup database if it necessary.</span></a></p>
+<p><a href="core/TestRunner.html?test=..%2Fcases/TestSuite2.html&amp;auto=on&amp;resultsUrl=..%2FpostResults.php">Click here to run  test suite2.</a></p>
