1. enchance README 2. Add TestSuite2 3. fomat TestController

--- a/test/cases/TestSuite2.html
+++ b/test/cases/TestSuite2.html
@@ -31,6 +31,9 @@ http-equiv="content-type">
             				</tr>
             
             <tr>
+            				<td><a href="TestSuite2/generate_report.html">generate_report</a></td>
+            				</tr>
+            <tr>
             				<td><a href="TestSuite2/user_change.html">user_change</a></td>
             				</tr>
         </tbody>
