--- a/test/cases/TestSuite2/create_new_finding.html
+++ b/test/cases/TestSuite2/create_new_finding.html
@@ -16,7 +16,7 @@
 <tr>
 	<td>select</td>
 	<td>system</td>
-	<td>label=Test System One</td>
+	<td>label=Asset Management System</td>
 </tr>
 <tr>
 	<td>storeSelectedLabel</td>
@@ -101,7 +101,7 @@
 <tr>
 	<td>select</td>
 	<td>network</td>
-	<td>CSC Data Center</td>
+	<td>label=Eastern Data Center</td>
 </tr>
 <tr>
 	<td>storeValue</td>
