--- a/test/cases/TestSuite2/create_new_asset.html
+++ b/test/cases/TestSuite2/create_new_asset.html
@@ -31,7 +31,7 @@
 <tr>
 	<td>select</td>
 	<td>system_list</td>
-	<td>label=Test System One</td>
+	<td>label=Asset Management System</td>
 </tr>
 <tr>
 	<td>storeSelectedLabel</td>
@@ -41,7 +41,7 @@
 <tr>
 	<td>select</td>
 	<td>network_list</td>
-	<td>label=CSC Data Center</td>
+	<td>label=Eastern Data Center</td>
 </tr>
 <tr>
 	<td>storeSelectedLabel</td>
@@ -71,7 +71,7 @@
 <tr>
 	<td>type</td>
 	<td>prod_name</td>
-	<td>freebsd</td>
+	<td>inet</td>
 </tr>
 <tr>
 	<td>storeValue</td>
@@ -80,18 +80,8 @@
 </tr>
 <tr>
 	<td>type</td>
-	<td>prod_version</td>
-	<td>1.2</td>
-</tr>
-<tr>
-	<td>storeValue</td>
-	<td>//input[@name="prod_version"]</td>
-	<td>prod_version</td>
-</tr>
-<tr>
-	<td>type</td>
 	<td>prod_vendor</td>
-	<td>Freebsd</td>
+	<td>GNU</td>
 </tr>
 <tr>
 	<td>storeValue</td>
@@ -99,34 +89,39 @@
 	<td>prod_vendor</td>
 </tr>
 <tr>
+	<td>type</td>
+	<td>prod_version</td>
+	<td>6.02</td>
+</tr>
+<tr>
+	<td>storeValue</td>
+	<td>//input[@name="prod_version"]</td>
+	<td>prod_version</td>
+</tr>
+<tr>
 	<td>click</td>
 	<td>search_product</td>
 	<td></td>
 </tr>
 <tr>
-	<td>assertElementPresent</td>
-	<td>//select[@name="prod_list"]</td>
-	<td>${prod_name}</td>
-</tr>
-<tr>
-	<td>assertElementPresent</td>
-	<td>//select[@name="prod_list"]</td>
-	<td>${prod_vendor}</td>
-</tr>
-<tr>
-	<td>assertElementPresent</td>
-	<td>//select[@name="prod_list"]</td>
-	<td>${prod_version}</td>
-</tr>
-<tr>
 	<td>select</td>
 	<td>prod_list</td>
-	<td>label=5 | FreeBSD | FreeBSD | 1.2</td>
+	<td>label=220 | inet | GNU | 6.02</td>
 </tr>
 <tr>
-	<td>storeSelectedLabel</td>
+	<td>assertSelectedLabel</td>
 	<td>//select[@name="prod_list"]</td>
-	<td>product</td>
+	<td>glob:*${prod_name}*</td>
+</tr>
+<tr>
+	<td>assertSelectedLabel</td>
+	<td>//select[@name="prod_list"]</td>
+	<td>glob:*${prod_vendor}*</td>
+</tr>
+<tr>
+	<td>assertSelectedLabel</td>
+	<td>//select[@name="prod_list"]</td>
+	<td>glob:*${prod_version}*</td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -142,11 +137,6 @@
 	<td>clickAndWait</td>
 	<td>link=New Finding</td>
 	<td></td>
-</tr>
-<tr>
-	<td>select</td>
-	<td>system</td>
-	<td>label=Test System One</td>
 </tr>
 <tr>
 	<td>select</td>
@@ -179,29 +169,9 @@
 	<td></td>
 </tr>
 <tr>
-	<td>assertElementPresent</td>
-	<td>//fieldset</td>
+	<td>assertTextPresent</td>
 	<td>${system}</td>
-</tr>
-<tr>
-	<td>assertElementPresent</td>
-	<td>//fieldset</td>
-	<td>${ip}</td>
-</tr>
-<tr>
-	<td>assertElementPresent</td>
-	<td>//fieldset</td>
-	<td>${prod_name}</td>
-</tr>
-<tr>
-	<td>assertElementPresent</td>
-	<td>//fieldset</td>
-	<td>${prod_vendor}</td>
-</tr>
-<tr>
-	<td>assertElementPresent</td>
-	<td>//fieldset</td>
-	<td>${prod_version}</td>
+	<td></td>
 </tr>
 
 </tbody></table>
