--- a/test/cases/TestSuite2/user_change.html
+++ b/test/cases/TestSuite2/user_change.html
@@ -15,37 +15,7 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=2</td>
-	<td></td>
-</tr>
-<tr>
-	<td>clickAndWait</td>
-	<td>link=»</td>
-	<td></td>
-</tr>
-<tr>
-	<td>clickAndWait</td>
-	<td>link=Users list</td>
-	<td></td>
-</tr>
-<tr>
-	<td>select</td>
-	<td>fid</td>
-	<td>label=Username</td>
-</tr>
-<tr>
-	<td>type</td>
-	<td>qv</td>
-	<td>nina.colon</td>
-</tr>
-<tr>
-	<td>clickAndWait</td>
-	<td>//input[@value='Search']</td>
-	<td></td>
-</tr>
-<tr>
-	<td>clickAndWait</td>
-	<td>//a/img</td>
+	<td>//tr[7]/td[8]/a/img</td>
 	<td></td>
 </tr>
 <tr>
@@ -60,17 +30,7 @@
 </tr>
 <tr>
 	<td>click</td>
-	<td>system_18</td>
-	<td></td>
-</tr>
-<tr>
-	<td>click</td>
-	<td>system_24</td>
-	<td></td>
-</tr>
-<tr>
-	<td>click</td>
-	<td>system_29</td>
+	<td>system_8</td>
 	<td></td>
 </tr>
 <tr>
@@ -84,48 +44,13 @@
 	<td></td>
 </tr>
 <tr>
-	<td>type</td>
-	<td>qv</td>
-	<td>nina.colon</td>
-</tr>
-<tr>
 	<td>clickAndWait</td>
-	<td>//input[@value='Search']</td>
-	<td></td>
-</tr>
-<tr>
-	<td>select</td>
-	<td>fid</td>
-	<td>label=Username</td>
-</tr>
-<tr>
-	<td>clickAndWait</td>
-	<td>//input[@value='Search']</td>
+	<td>//tr[7]/td[9]/a/img</td>
 	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>//td[9]/a/img</td>
-	<td></td>
-</tr>
-<tr>
-	<td>clickAndWait</td>
-	<td>link=Logout</td>
-	<td></td>
-</tr>
-<tr>
-	<td>type</td>
-	<td>username</td>
-	<td>nina.colon</td>
-</tr>
-<tr>
-	<td>type</td>
-	<td>userpass</td>
-	<td>123</td>
-</tr>
-<tr>
-	<td>clickAndWait</td>
-	<td>//input[@value='Login']</td>
+	<td>link=Users</td>
 	<td></td>
 </tr>
 
