--- a/test/cases/TestSuite2/create_new_asset.html
+++ b/test/cases/TestSuite2/create_new_asset.html
@@ -31,7 +31,7 @@
 <tr>
 	<td>select</td>
 	<td>system_list</td>
-	<td>label=Asset Management System</td>
+	<td>label=Bpdyisbb.flq Vocnfwb</td>
 </tr>
 <tr>
 	<td>storeSelectedLabel</td>
@@ -41,7 +41,7 @@
 <tr>
 	<td>select</td>
 	<td>network_list</td>
-	<td>label=Eastern Data Center</td>
+	<td>label=Network 0</td>
 </tr>
 <tr>
 	<td>storeSelectedLabel</td>
@@ -102,6 +102,11 @@
 	<td>click</td>
 	<td>search_product</td>
 	<td></td>
+</tr>
+<tr>
+	<td>waitForSelectOptions</td>
+	<td>prod_list</td>
+	<td>220 | inet | GNU | 6.02</td>
 </tr>
 <tr>
 	<td>select</td>
