--- a/test/cases/TestSuite2/create_new_finding.html
+++ b/test/cases/TestSuite2/create_new_finding.html
@@ -16,7 +16,7 @@
 <tr>
 	<td>select</td>
 	<td>system</td>
-	<td>label=Asset Management System</td>
+	<td>label=Bpdyisbb.flq Vocnfwb</td>
 </tr>
 <tr>
 	<td>storeSelectedLabel</td>
@@ -61,7 +61,7 @@
 <tr>
 	<td>select</td>
 	<td>source</td>
-	<td>label=A-123A Audit</td>
+	<td>label=RYGGX Qqbaf</td>
 </tr>
 <tr>
 	<td>storeSelectedLabel</td>
@@ -101,7 +101,7 @@
 <tr>
 	<td>select</td>
 	<td>network</td>
-	<td>label=Eastern Data Center</td>
+	<td>label=Network 0</td>
 </tr>
 <tr>
 	<td>storeValue</td>
