--- a/test/cases/TestSuite2/remediation_view_search.html
+++ b/test/cases/TestSuite2/remediation_view_search.html
@@ -21,7 +21,7 @@
 <tr>
 	<td>select</td>
 	<td>source</td>
-	<td>label=Risk Assessment</td>
+	<td>label=Ugodvncrdb Tcrpunybtz</td>
 </tr>
 <tr>
 	<td>storeSelectedLabel</td>
@@ -31,12 +31,12 @@
 <tr>
 	<td>type</td>
 	<td>ids</td>
-	<td>14,15,16</td>
+	<td>3608,3752</td>
 </tr>
 <tr>
 	<td>select</td>
 	<td>status</td>
-	<td>label=(OPEN) Awaiting Mitigation Approval</td>
+	<td>label=(ES) Evidence Submitted to IV&V</td>
 </tr>
 <tr>
 	<td>storeSelectedLabel</td>
@@ -46,7 +46,7 @@
 <tr>
 	<td>select</td>
 	<td>type</td>
-	<td>label=(NONE) Unclassified</td>
+	<td>label=(CAP) Corrective Action Plan</td>
 </tr>
 <tr>
 	<td>storeSelectedLabel</td>
@@ -56,7 +56,12 @@
 <tr>
 	<td>select</td>
 	<td>action_owner</td>
-	<td>label=Personnel Security System</td>
+	<td>label=Zbmampezb Cbyr Hkorsnwt Katcln</td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>//input[@value='Search']</td>
+	<td></td>
 </tr>
 <tr>
 	<td>storeSelectedLabel</td>
