--- a/test/cases/TestSuite2/user_change.html
+++ b/test/cases/TestSuite2/user_change.html
@@ -30,7 +30,52 @@
 </tr>
 <tr>
 	<td>click</td>
-	<td>system_8</td>
+	<td>system_18</td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>system_24</td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>system_29</td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>system_34</td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>system_38</td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>system_43</td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>system_47</td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>system_51</td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>system_55</td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>system_59</td>
 	<td></td>
 </tr>
 <tr>
