--- a/test/cases/TestSuite2/generate_report.html
+++ b/test/cases/TestSuite2/generate_report.html
@@ -1,12 +1,12 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>report_search</title>
+<title>generate_report</title>
 </head>
 <body>
 <table cellpadding="1" cellspacing="1" border="1">
 <thead>
-<tr><td rowspan="1" colspan="3">report_search</td></tr>
+<tr><td rowspan="1" colspan="3">generate_report</td></tr>
 </thead><tbody>
 <tr>
 	<td>clickAndWait</td>
@@ -16,7 +16,7 @@
 <tr>
 	<td>select</td>
 	<td>system</td>
-	<td>label=PSS</td>
+	<td>label=(F) SBG</td>
 </tr>
 <tr>
 	<td>storeSelectedLabel</td>
@@ -26,7 +26,7 @@
 <tr>
 	<td>select</td>
 	<td>source</td>
-	<td>label=Risk Assessment</td>
+	<td>label=Bncpjqkmttpel & Wsnuesimnbbrz</td>
 </tr>
 <tr>
 	<td>storeSelectedLabel</td>
@@ -35,13 +35,23 @@
 </tr>
 <tr>
 	<td>select</td>
+	<td>type</td>
+	<td>label=Cap</td>
+</tr>
+<tr>
+	<td>select</td>
 	<td>status</td>
-	<td>label=Open</td>
+	<td>label=Closed</td>
 </tr>
 <tr>
 	<td>storeSelectedLabel</td>
 	<td>status</td>
 	<td>status</td>
+</tr>
+<tr>
+	<td>select</td>
+	<td>fy</td>
+	<td>label=2006</td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
