Adjust test suit about asset and finding.

--- a/test/cases/TestSuite2.html
+++ b/test/cases/TestSuite2.html
@@ -22,9 +22,10 @@ http-equiv="content-type">
             				<td><a href="TestSuite2/dashboard_param_validation.html">dashboard_param_validation</a></td>
             				</tr>
             <tr>
-            				<td><a href="TestSuite2/create_new_asset.html">create_new_asset</a></td>
+            				<td><a href="TestSuite2/fismazf-2-2.html" title="create_new_asset">fismazf-2-2</a></td>
             				</tr>
-            <tr><td><a href="TestSuite2/create_new_finding.html">create_new_finding</a></td></tr> 
+            <tr><td><a href="TestSuite2/fismazf-2-3.html" title="create_new_finding">fismazf-2-3</a></td>
+            </tr> 
             
             <tr>
             				<td><a href="TestSuite2/remediation_view_search.html">remediation_view_search</a></td>
