--- a/test/selenium/Remediation_CAP_No_Denials/SSO_Approve_Evidence.html
+++ b/test/selenium/Remediation_CAP_No_Denials/SSO_Approve_Evidence.html
@@ -4,22 +4,16 @@
 <head profile="http://selenium-ide.openqa.org/profiles/test-case">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <link rel="selenium.base" href="" />
-<title>Root Logout</title>
+<title>SSO_Approve_Evidence</title>
 </head>
 <body>
 <table cellpadding="1" cellspacing="1" border="1">
 <thead>
-<tr><td rowspan="1" colspan="3">Root Logout</td></tr>
+<tr><td rowspan="1" colspan="3">SSO_Approve_Evidence</td></tr>
 </thead><tbody>
-<!--Log out-->
 <tr>
-	<td>clickAndWait</td>
-	<td>//input[@value=&quot;Logout&quot;]</td>
+	<td>asdf</td>
 	<td></td>
-</tr>
-<tr>
-	<td>verifyTitle</td>
-	<td>Login</td>
 	<td></td>
 </tr>
 
