--- a/test/selenium/Root_Setup/index.html
+++ b/test/selenium/Root_Setup/index.html
@@ -8,7 +8,12 @@
 <body>
 <table id="suiteTable" cellpadding="1" cellspacing="1" border="1" class="selenium"><tbody>
 <tr><td><b>Test Suite</b></td></tr>
-<tr><td><a href="./Install_OpenFISMA/Install_OpenFISMA.html">Install_OpenFISMA</a></td></tr>
+<tr><td><a href="./Root_Login.html">Root_Login</a></td></tr>
+<tr><td><a href="./Root_Setup_Systems.html">Root_Setup_Systems</a></td></tr>
+<tr><td><a href="./Root_Setup_Assets.html">Root_Setup_Assets</a></td></tr>
+<tr><td><a href="./Root_Setup_Finding_Sources.html">Root_Setup_Finding_Sources</a></td></tr>
+<tr><td><a href="./Root_Setup_Accounts.html">Root_Setup_Accounts</a></td></tr>
+<tr><td><a href="./Root_Logout.html">Root Logout</a></td></tr>
 </tbody></table>
 </body>
 </html>
