--- a/test/selenium/Admin_CRUD/Admin_Logout.html
+++ b/test/selenium/Admin_CRUD/Admin_Logout.html
@@ -4,12 +4,12 @@
 <head profile="http://selenium-ide.openqa.org/profiles/test-case">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <link rel="selenium.base" href="" />
-<title>Root Logout</title>
+<title>Admin_Logout</title>
 </head>
 <body>
 <table cellpadding="1" cellspacing="1" border="1">
 <thead>
-<tr><td rowspan="1" colspan="3">Root Logout</td></tr>
+<tr><td rowspan="1" colspan="3">Admin_Logout</td></tr>
 </thead><tbody>
 <!--Log out-->
 <tr>
