--- a/test/selenium/Install_OpenFISMA/index.html
+++ b/test/selenium/Install_OpenFISMA/index.html
@@ -3,13 +3,12 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
   <meta content="text/html; charset=UTF-8" http-equiv="content-type" />
-  <title>OpenFISMA Automated Functional Tests (Selenium)</title>
+  <title>Test Suite</title>
 </head>
 <body>
 <table id="suiteTable" cellpadding="1" cellspacing="1" border="1" class="selenium"><tbody>
-<tr><td><b>Test Suites</b></td></tr>
-<tr><td><a href="./TestRunner.html?test=InstallOpenFisma">Install_OpenFISMA</a></td></tr>
-<tr><td><a href="./TestRunner.html?test=InstallOpenFisma">Root_Setup</a></td></tr>
+<tr><td><b>Test Suite</b></td></tr>
+<tr><td><a href="./Install_OpenFISMA.html">Install_OpenFISMA</a></td></tr>
 </tbody></table>
 </body>
 </html>
