--- a/test/selenium/Root_Setup/Root_Setup_Accounts.html
+++ b/test/selenium/Root_Setup/Root_Setup_Accounts.html
@@ -69,7 +69,7 @@
 </tr>
 <tr>
 	<td>type</td>
-	<td>confirm_password</td>
+	<td>user_password_confirm</td>
 	<td>password</td>
 </tr>
 <tr>
@@ -93,31 +93,630 @@
 	<td></td>
 </tr>
 <tr>
-	<td>clickAndWait</td>
-	<td>user_list</td>
-	<td></td>
+	<td>type</td>
+	<td>user_name_first</td>
+	<td>Authorizing</td>
 </tr>
 <tr>
-	<td>verifyTextPresent</td>
-	<td>application.administrator@agency.gov</td>
-	<td></td>
+	<td>type</td>
+	<td>user_name_last</td>
+	<td>Official</td>
 </tr>
 <tr>
-	<td>verifyTextPresent</td>
-	<td>application.administrator</td>
-	<td></td>
+        <td>type</td>
+        <td>user_phone_office</td>
+        <td>123.123.1234</td>
 </tr>
 <tr>
-	<td>verifyTextPresent</td>
-	<td>123.123.1234</td>
-	<td></td>
-</tr>
-<tr>
-	<td>verifyTextPresent</td>
+	<td>type</td>
+	<td>user_phone_mobile</td>
 	<td>234.234.2345</td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>user_email</td>
+	<td>authorizing.official@agency.gov</td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>user_title</td>
+	<td>Authorizing Official</td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>user_account</td>
+	<td>authorizing.official</td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>user_password</td>
+	<td>password</td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>user_password_confirm</td>
+	<td>password</td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>system_1</td>
 	<td></td>
 </tr>
-
+<tr>
+	<td>click</td>
+	<td>system_2</td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>system_3</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>//input[@value='Create']</td>
+	<td></td>
+</tr>
+<tr>
+	<td>select</td>
+	<td>user_role_id</td>
+	<td>label=Certification Agent</td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>user_name_first</td>
+	<td>Certification</td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>user_name_last</td>
+	<td>Agent</td>
+</tr>
+<tr>
+        <td>type</td>
+        <td>user_phone_office</td>
+        <td>123.123.1234</td>
+</tr>
+<tr>
+        <td>type</td>
+        <td>user_phone_mobile</td>
+        <td>234.234.2345</td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>user_email</td>
+	<td>certification.agent@agency.gov</td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>user_title</td>
+	<td>Certification Agent</td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>user_account</td>
+	<td>certification.agent</td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>user_password</td>
+	<td>password</td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>user_password_confirm</td>
+	<td>password</td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>system_1</td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>system_2</td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>system_3</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>//input[@value='Create']</td>
+	<td></td>
+</tr>
+<tr>
+	<td>select</td>
+	<td>user_role_id</td>
+	<td>label=Certification Agent</td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>user_name_first</td>
+	<td>Auditor</td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>user_name_last</td>
+	<td>Auditor</td>
+</tr>
+<tr>
+        <td>type</td>
+        <td>user_phone_office</td>
+        <td>123.123.1234</td>
+</tr>
+<tr>
+        <td>type</td>
+        <td>user_phone_mobile</td>
+        <td>234.234.2345</td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>user_email</td>
+	<td>auditor@agency.gov</td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>user_title</td>
+	<td>Auditor</td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>user_account</td>
+	<td>auditor</td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>user_password</td>
+	<td>password</td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>user_password_confirm</td>
+	<td>password</td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>system_1</td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>system_2</td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>system_3</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>//input[@value='Create']</td>
+	<td></td>
+</tr>
+<tr>
+	<td>select</td>
+	<td>user_role_id</td>
+	<td>label=Independent Verification and Validation</td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>user_name_first</td>
+	<td>Independent</td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>user_name_last</td>
+	<td>Verification</td>
+</tr>
+<tr>
+        <td>type</td>
+        <td>user_phone_office</td>
+        <td>123.123.1234</td>
+</tr>
+<tr>
+        <td>type</td>
+        <td>user_phone_mobile</td>
+        <td>234.234.2345</td>
+</tr>
+<tr>
+        <td>type</td>
+        <td>user_email</td>
+	<td>independent.verification@agency.gov</td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>user_title</td>
+	<td>Independent Verification and Validation</td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>user_account</td>
+	<td>independent.verification</td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>user_password</td>
+	<td>password</td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>user_password_confirm</td>
+	<td>password</td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>system_1</td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>system_2</td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>system_3</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>//input[@value='Create']</td>
+	<td></td>
+</tr>
+<tr>
+	<td>select</td>
+	<td>user_role_id</td>
+	<td>label=Information System Owner</td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>user_name_first</td>
+	<td>Information System</td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>user_name_last</td>
+	<td>Owner</td>
+</tr>
+<tr>
+        <td>type</td>
+        <td>user_phone_office</td>
+        <td>123.123.1234</td>
+</tr>
+<tr>
+        <td>type</td>
+        <td>user_phone_mobile</td>
+        <td>234.234.2345</td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>user_email</td>
+	<td>information.system.owner@agency.gov</td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>user_title</td>
+	<td>Information System Owner</td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>user_account</td>
+	<td>information.system.owner</td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>user_password</td>
+	<td>password</td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>user_password_confirm</td>
+	<td>password</td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>system_1</td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>system_2</td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>system_3</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>//input[@value='Create']</td>
+	<td></td>
+</tr>
+<tr>
+	<td>select</td>
+	<td>user_role_id</td>
+	<td>label=Information System Security Officer</td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>user_name_first</td>
+	<td>Information System</td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>user_name_last</td>
+	<td>Security Officer</td>
+</tr>
+<tr>
+        <td>type</td>
+        <td>user_phone_office</td>
+        <td>123.123.1234</td>
+</tr>
+<tr>
+        <td>type</td>
+        <td>user_phone_mobile</td>
+        <td>234.234.2345</td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>user_email</td>
+	<td>information.system.security.officer@agency.gov</td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>user_title</td>
+	<td>Information System Security Officer</td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>user_account</td>
+	<td>isso</td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>user_password</td>
+	<td>password</td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>user_password_confirm</td>
+	<td>password</td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>system_1</td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>system_2</td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>system_3</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>//input[@value='Create']</td>
+	<td></td>
+</tr>
+<tr>
+	<td>select</td>
+	<td>user_role_id</td>
+	<td>label=Reviewer</td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>user_name_first</td>
+	<td>Reviewer</td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>user_name_last</td>
+	<td>Reviewer</td>
+</tr>
+<tr>
+        <td>type</td>
+        <td>user_phone_office</td>
+        <td>123.123.1234</td>
+</tr>
+<tr>
+        <td>type</td>
+        <td>user_phone_mobile</td>
+        <td>234.234.2345</td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>user_email</td>
+	<td>reviewer@agency.gov</td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>user_title</td>
+	<td>Reviewer</td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>user_account</td>
+	<td>reviewer</td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>user_password</td>
+	<td>password</td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>user_password_confirm</td>
+	<td>password</td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>system_1</td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>system_2</td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>system_3</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>//input[@value='Create']</td>
+	<td></td>
+</tr>
+<tr>
+	<td>select</td>
+	<td>user_role_id</td>
+	<td>label=Senior Agency Information Security Officer</td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>user_name_first</td>
+	<td>Senior Agency</td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>user_name_last</td>
+	<td>Information Security Officer</td>
+</tr>
+<tr>
+        <td>type</td>
+        <td>user_phone_office</td>
+        <td>123.123.1234</td>
+</tr>
+<tr>
+        <td>type</td>
+        <td>user_phone_mobile</td>
+        <td>234.234.2345</td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>user_email</td>
+	<td>saiso@agency.gov</td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>user_title</td>
+	<td>SAISO</td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>user_account</td>
+	<td>saiso</td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>user_password</td>
+	<td>password</td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>user_password_confirm</td>
+	<td>password</td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>system_1</td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>system_2</td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>system_3</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>//input[@value='Create']</td>
+	<td></td>
+</tr>
+<tr>
+	<td>select</td>
+	<td>user_role_id</td>
+	<td>label=Operational Support Staff</td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>user_name_first</td>
+	<td>Operational Support</td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>user_name_last</td>
+	<td>Staff</td>
+</tr>
+<tr>
+        <td>type</td>
+        <td>user_phone_office</td>
+        <td>123.123.1234</td>
+</tr>
+<tr>
+        <td>type</td>
+        <td>user_phone_mobile</td>
+        <td>234.234.2345</td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>user_email</td>
+	<td>operational.support.staff@agency.gov</td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>user_title</td>
+	<td>OSS</td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>user_account</td>
+	<td>operational.support.staff</td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>user_password</td>
+	<td>password</td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>user_password_confirm</td>
+	<td>password</td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>system_1</td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>system_2</td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>system_3</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>//input[@value='Create']</td>
+	<td></td>
+</tr>
 </tbody></table>
 </body>
 </html>
